# codedeck

./: .gitignore  CLAUDE.md  DONE.md  NIP-17-DM-PLAN.md  README.md  REVIEW.md  REVIEWS_AND_FIXES.md  TODO.md  dev.sh  index.html  package-lock.json  package.json  two-phase-session-plan.md
scripts/: bootstrap-relay.sh  patch-android.sh  provision-relay-vps.py
src/: App.tsx  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: agent.rs  config.rs  lib.rs  main.rs  session.rs
src-tauri/src/agent/: git.rs  history.rs  messages.rs  mod.rs  retry.rs  streaming.rs  tools.rs
src/__tests__/: sessionStore.test.ts  useDisplayEntries.test.ts
src/components/: DmConversationView.tsx  DmTile.tsx  ErrorBoundary.tsx  InputBar.tsx  MainPanel.tsx  NewSessionModal.tsx  OutputStream.tsx  PermissionBar.tsx  QuickPromptBar.tsx  SessionHeader.tsx  SettingsModal.tsx  Sidebar.tsx  UndoToast.tsx
src/contexts/: SpeechContext.tsx
src/hooks/: useDisplayEntries.ts  useOrderedSessionIds.ts  useSpeechRecognition.ts  useSwipeToDelete.ts  useSwipeToNavigate.ts  useVoiceMode.ts
src/ipc/: tauri.ts
src/services/: bridgeService.ts  debugLog.ts  nostrService.ts  notificationService.ts  persistStore.ts  ttsService.ts
src/stores/: dmStore.ts  quickPromptStore.ts  sessionStore.ts  uiStore.ts  voiceModeStore.ts
src/styles/: dm.css  global.css  header.css  input.css  modal.css  output.css  permission.css  sidebar.css
src/utils/: blossomUpload.ts  cycleIndex.ts  getOrderedSessionIds.ts  imageUtils.ts  relativeTime.ts  ttsFormatter.ts  voiceCommands.ts
tauri-plugin-background-relay/: .gitignore  Cargo.toml  build.rs
tauri-plugin-background-relay/android/: build.gradle.kts
tauri-plugin-background-relay/permissions/: default.toml
tauri-plugin-background-relay/src/: commands.rs  desktop.rs  lib.rs  mobile.rs  models.rs
tauri-plugin-speech-recognizer/: Cargo.toml  build.rs
tauri-plugin-speech-recognizer/android/: build.gradle.kts
tauri-plugin-speech-recognizer/permissions/: default.toml
tauri-plugin-speech-recognizer/src/: commands.rs  desktop.rs  lib.rs  mobile.rs  (+1 more)
(+8 files in other folders)
