[package]
name = "codedeck"
version = "0.1.0"
description = "CodeDeck - Multi-session AI coding agent"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "codedeck_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio-util = "0.7"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
anyhow = "1"
walkdir = "2"
regex = "1"
futures-util = "0.3"
tokio-stream = "0.1"
globset = "0.4"
tauri-plugin-stronghold = "2"

[profile.dev.package.scrypt]
opt-level = 3
